...
        android:id="@+id/textView7"
        android:layout_width="365dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tut_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btLetsPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="365dp"
...
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shapelogin"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="Lets play!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
...
